# hackathons-monorepo

./: CONTRIBUTING.md  CREDITS.md  README.md
submissions/ChainRepute/: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  deploy_polkadot.sh  package-lock.json  package.json  tailwind.config.ts
submissions/ChainRepute/contracts/governance-sbt/: Cargo.toml  lib.rs
submissions/ChainRepute/contracts/reputation-registry/: Cargo.toml
submissions/ChainRepute/contracts/reputation-registry/src/: lib.rs
submissions/ChainRepute/contracts/reputationSBT/: Cargo.toml
submissions/ChainRepute/contracts/soroban-reputation/: Cargo.toml
submissions/ChainRepute/contracts/stellar-wallet-info/: Cargo.toml
submissions/ChainRepute/contracts/stellar-wallet-info/src/: lib.rs
submissions/ChainRepute/contracts/wallet-info/: Cargo.toml
submissions/ChainRepute/contracts/wallet-info/src/: lib.rs
submissions/ChainRepute/server/: .env.example  package-lock.json  package.json
submissions/ChainRepute/server/src/: index.ts
submissions/ChainRepute/src/: App.tsx  index.css
submissions/ChainRepute/src/components/: CTA.tsx  Features.tsx  FetchWalletInfo.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  ReputationDashboard.tsx  ReputationSBT.tsx  ReputationScanner.tsx  Testimonials.tsx
submissions/ChainRepute/src/pages/: Dashboard.tsx  Landing.tsx  Profile.tsx  Rewards.tsx
submissions/ChainRepute/src/services/: api.ts  polkadot.ts  reputation.ts
submissions/ChainRepute/src/wallet/: WalletContext.tsx
submissions/Sync-flow/: project.md  readme.md
submissions/Sync-flow/backend/: env.example  package-lock.json  package.json  tsconfig.json
submissions/Sync-flow/backend-stellar/: env.example  package-lock.json  package.json  tsconfig.json
submissions/Sync-flow/backend-stellar/data/: processed.json
submissions/Sync-flow/backend-stellar/src/: config.ts  index.ts  logger.ts  relayer.ts  stellarClient.ts  types.ts
submissions/Sync-flow/backend/data/: processed.json
submissions/Sync-flow/backend/src/: index.ts  logger.ts  relayer.ts
submissions/Sync-flow/contracts/: BridgeVault.sol
submissions/Sync-flow/frontend/: package-lock.json  package.json
submissions/Sync-flow/frontend-stellar/: env.example  package-lock.json  package.json
submissions/Sync-flow/frontend-stellar/app/: page.tsx  providers.tsx
submissions/Sync-flow/frontend-stellar/lib/: bridgeVaultAbi.ts  wagmiConfig.ts
submissions/Sync-flow/frontend/app/: page.tsx  providers.tsx
submissions/Sync-flow/frontend/lib/: bridgeVaultAbi.ts  wagmiConfig.ts
submissions/TEMPLATE/: README.md
submissions/hackerz/: README.md  index.css  package-lock.json  package.json  print_address.cjs
submissions/hackerz/backend/: bridge_listener.cjs  check_relayer.cjs  deploy.cjs
submissions/hackerz/components/: BorrowCard.jsx  Card.jsx  DepositCard.jsx  Input.jsx
submissions/hackerz/contexts/: WalletContext.jsx
submissions/hackerz/data/: transactions.json
submissions/hackerz/src/: App.jsx  constants.js
submissions/hackerz/src/components/: AssetSelector.jsx  Layout.jsx  Navbar.jsx
submissions/hackerz/src/contract/: Cargo.toml
submissions/hackerz/src/pages/: Dashboard.jsx
submissions/paystamp/: .eslintrc.json  .gitignore  .prettierignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  turbo.json
submissions/paystamp/.github/workflows/: ci.yml  e2e.yml
submissions/paystamp/apps/api/: Dockerfile  README.md  package.json  setup-env.sh  tsconfig.json  update-env-cloud.sh
submissions/paystamp/apps/web/: .eslintrc.json  next.config.js  package.json  (+2 more)
submissions/paystamp/scripts/: deploy-contracts.sh  setup-db.sh  validate-contracts.sh
submissions/polar/relayer/: processed_events.json
submissions/polkadot-contract-sdk/: README.md
submissions/polkadot-contract-sdk/final_code/: deployment.json
submissions/polkadot-contract-sdk/sdk/: INSTALL.md  PUBLISH.md  README.md  README_SDK.md  install.sh  publish.sh
submissions/polkadot-contract-sdk/work_around/: .gitignore  GET_PRIVATE_KEY.md  HOW_IT_WORKS.md  MANIFEST.in  PUBLISH.md  QUICK_EXPLANATION.md  README.md  README_FRONTEND.md  README_UI.md  README_WASM.md  _wasm_wrapper.py  app.py  client_execute_wasm.py  deploy_contract.py  deploy_wasm.py  generate_account.py  interact.py  main.py  publish.sh  pyproject.toml  requirements.txt  setup.py  verify_setup.py
submissions/polkadot-contract-sdk/work_around/frontend/: app.js  index.html  style.css
submissions/polkadot-contract-sdk/work_around/samples/: HTTP_IN_SMART_CONTRACTS.md  QUICK_FIX.md  README.md  README_API.md  WEATHER_SETUP.md  contract1_simple_voting.py  contract2_token_transfer.py  contract3_price_calculator.py  contract4_staking_rewards.py  contract5_escrow_calculator.py  contract6_price_oracle.py  contract7_api_data_processor.py  contract8_weather_data.py  contract9_http_api.py  example_weather_usage.py  http_wasm_executor.py  oracle_client.py  sample1_basic_arithmetic.py  sample2_power_operations.py  sample3_max_min.py  sample4_modulo.py  sample5_calculator.py  weather_oracle.py
submissions/polkadot-contract-sdk/work_around/sdk/: .gitignore  QUICKSTART.md  QUICK_PUBLISH.md
submissions/polkadot-contract-sdk/work_around/static/: app.js  style.css
submissions/polkadot-contract-sdk/work_around/templates/: index.html
submissions/spacewalk/: .gitignore  BIP39_FIX_SUMMARY.md  CUMULUS_INTEGRATION_STATUS.md  Cargo.toml  DEPENDENCY_PATCHES_SUMMARY.md  FFLONK_DEPENDENCY_ISSUE.md  FFLONK_FIX_SUMMARY.md  REGISTER_PARACHAIN_SUDO.md  example-payment.js  rebuild-collator.sh  register-parachain-sudo.sh  register-parachain-ui.md  stellar_secret_key.txt
submissions/spacewalk/parachain/: BUILD_NOTES.md  COLLATOR_FIXES.md  COMPILATION_FIXES.md  COMPLETION.md  README.md  RUN_COMMANDS.md  STATUS.md  TEST_COMMANDS.md
submissions/spacewalk/parachain/node/: Cargo.toml  build.rs
submissions/spacewalk/parachain/node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
submissions/spacewalk/parachain/runtime/: Cargo.toml  build.rs
submissions/spacewalk/parachain/runtime/src/: lib.rs
(+111 files in other folders)
