[package]
name = "reputation-registry"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.5.0"

[dev_dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }

[profile.release]
opt-level = "z"              # Optimize for smallest size
overflow-checks = true        # Check for integer overflows
debug = 0                    # No debug info
strip = "symbols"            # Strip symbols to reduce size
debug-assertions = false     # No debug assertions
panic = "abort"              # Abort on panic
codegen-units = 1            # Better optimization
lto = true                   # Link time optimization