[package]
name = "wallet-info"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.7.7", features = ["testutils"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stellar-xdr = { version = "25.0.0", features = ["std"] }
hex = "0.4"
bs58 = { version = "0.5", default-features = false }

[profile.release]
opt-level = "z"  # Optimize for size
overflow-checks = true
debug = 0
strip = "symbols"