[package]
authors = ["Spacewalk Parachain"]
build = "build.rs"
edition = "2021"
name = "spacewalk-parachain-collator"
version = "1.0.18"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "spacewalk-parachain-collator"

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
codec = { workspace = true, default-features = true }
hex-literal = { workspace = true, default-features = true }
hex = "0.4"
log = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true, features = ["derive"] }
serde_json = { workspace = true, default-features = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }

# Parachain runtime
primitives = { package = "spacewalk-primitives", path = "../../primitives" }
spacewalk-parachain-runtime = { path = "../runtime" }

# Substrate dependencies
sc-basic-authorship = { workspace = true, default-features = true }
sc-cli = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-consensus = { workspace = true, default-features = true }
sc-consensus-aura = { workspace = true, default-features = true }
sc-consensus-manual-seal = { workspace = true, default-features = true }
sc-executor = { workspace = true, default-features = true }
sc-chain-spec = { workspace = true, default-features = true }
sc-consensus-grandpa = { workspace = true, default-features = true }
sc-keystore = { workspace = true, default-features = true }
sc-network = { workspace = true, default-features = true }
sc-offchain = { workspace = true, default-features = true }
sc-service = { workspace = true, default-features = true }
sc-telemetry = { workspace = true, default-features = true }
sc-transaction-pool = { workspace = true, default-features = true }
sp-api = { workspace = true, default-features = true }
sp-arithmetic = { workspace = true, default-features = true }
sp-block-builder = { workspace = true, default-features = true }
sp-consensus = { workspace = true, default-features = true }
sp-consensus-aura = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-consensus-grandpa = { workspace = true, default-features = true }
sp-inherents = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-offchain = { workspace = true, default-features = true }
sp-keystore = { workspace = true, default-features = true }
sp-keyring = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-session = { workspace = true, default-features = true }
sp-timestamp = { workspace = true, default-features = true }
sp-transaction-pool = { workspace = true, default-features = true }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = true }

frame-benchmarking = { workspace = true, default-features = true }
frame-benchmarking-cli = { workspace = true, default-features = true }
frame-support = { workspace = true, default-features = true }
frame-system = { workspace = true, default-features = true }

pallet-transaction-payment = { workspace = true, default-features = true }

substrate-stellar-sdk = { workspace = true, default-features = true }

# Cumulus dependencies (for parachain collator)
cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }

# RPC dependencies
jsonrpc-core = "18.0.0"
jsonrpsee = { version = "0.16.0", features = ["server", "macros"] }

# Spacewalk RPC modules
module-issue-rpc = { path = "../../pallets/issue/rpc" }
module-redeem-rpc = { path = "../../pallets/redeem/rpc" }
module-replace-rpc = { path = "../../pallets/replace/rpc" }
module-oracle-rpc = { path = "../../pallets/oracle/rpc" }
module-vault-registry-rpc = { path = "../../pallets/vault-registry/rpc" }

# Substrate RPC dependencies
sc-rpc = { workspace = true, default-features = true }
sc-rpc-api = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
pallet-transaction-payment-rpc = { workspace = true, default-features = true }
substrate-frame-rpc-system = { workspace = true, default-features = true }

[features]
default = []
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"spacewalk-parachain-runtime/runtime-benchmarks",
]

