[package]
authors = ["Spacewalk Parachain"]
edition = "2021"
name = "spacewalk-parachain-runtime"
version = "1.0.18"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }

cfg-if = { workspace = true}

# Substrate dependencies
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }

frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }

frame-system-rpc-runtime-api = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }

# Parachain dependencies (Cumulus)
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-parachain-info = { package = "staging-parachain-info", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }

# XCM dependencies
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-xcm = { package = "pallet-xcm", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }

# Used for runtime benchmarking
frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true}

# Aura & GRANDPA dependencies
pallet-aura = { workspace = true }
pallet-grandpa = { workspace = true }
sp-consensus-aura = { workspace = true }

# Orml dependencies
orml-currencies = { workspace = true }
orml-tokens = { workspace = true }
orml-traits = { workspace = true }

# Spacewalk pallets
clients-info = { path = "../../pallets/clients-info", default-features = false }
currency = { path = "../../pallets/currency", default-features = false }
fee = { path = "../../pallets/fee", default-features = false }
issue = { path = "../../pallets/issue", default-features = false }
nomination = { path = "../../pallets/nomination", default-features = false }
oracle = { path = "../../pallets/oracle", default-features = false }
pooled-rewards = { path = "../../pallets/pooled-rewards", default-features = false }
redeem = { path = "../../pallets/redeem", default-features = false }
replace = { path = "../../pallets/replace", default-features = false }
reward-distribution = { path = "../../pallets/reward-distribution", default-features = false }
security = { path = "../../pallets/security", default-features = false }
staking = { path = "../../pallets/staking", default-features = false }
stellar-relay = { path = "../../pallets/stellar-relay", default-features = false }
vault-registry = { path = "../../pallets/vault-registry", default-features = false }

# RPC runtime APIs
module-issue-rpc-runtime-api = { path = "../../pallets/issue/rpc/runtime-api", default-features = false }
module-oracle-rpc-runtime-api = { path = "../../pallets/oracle/rpc/runtime-api", default-features = false }
module-redeem-rpc-runtime-api = { path = "../../pallets/redeem/rpc/runtime-api", default-features = false }
module-replace-rpc-runtime-api = { path = "../../pallets/replace/rpc/runtime-api", default-features = false }
module-vault-registry-rpc-runtime-api = { path = "../../pallets/vault-registry/rpc/runtime-api", default-features = false }

primitives = { package = "spacewalk-primitives", path = "../../primitives", default-features = false }

dia-oracle = { workspace = true }

[dev-dependencies]
flate2 = { workspace = true }
hex = { workspace = true, default-features = true }
mocktopus = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true, default-features = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[features]
default = [ "std" ]
disable-runtime-api = []
runtime-benchmarks = [
	"clients-info/runtime-benchmarks",
	"currency/runtime-benchmarks",
	"dia-oracle/runtime-benchmarks",
	"fee/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"issue/runtime-benchmarks",
	"nomination/runtime-benchmarks",
	"oracle/runtime-benchmarks",
	"orml-tokens/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pooled-rewards/runtime-benchmarks",
	"redeem/runtime-benchmarks",
	"replace/runtime-benchmarks",
	"reward-distribution/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"staking/runtime-benchmarks",
	"stellar-relay/runtime-benchmarks",
	"vault-registry/runtime-benchmarks",
]
std = [
	"clients-info/std",
	"codec/std",
	"currency/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-parachain-inherent/std",
	"cumulus-primitives-utility/std",
	"pallet-parachain-info/std",
	"dia-oracle/std",
	"fee/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"issue/std",
	"module-issue-rpc-runtime-api/std",
	"module-oracle-rpc-runtime-api/std",
	"module-redeem-rpc-runtime-api/std",
	"module-replace-rpc-runtime-api/std",
	"module-vault-registry-rpc-runtime-api/std",
	"nomination/std",
	"oracle/std",
	"orml-currencies/std",
	"orml-tokens/std",
	"orml-traits/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-xcm/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-common/std",
	"pooled-rewards/std",
	"primitives/std",
	"redeem/std",
	"replace/std",
	"reward-distribution/std",
	"scale-info/std",
	"security/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"staking/std",
	"stellar-relay/std",
	"vault-registry/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
]
testing-utils = [ "oracle/testing-utils" ]

